[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Various implementation of RL algorithms to solve Gym environments."
authors = ["Paolo Bernacca <bernaccapaolo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.21"

torch = [
    { url="https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp38-cp38-win_amd64.whl", python=">=3.8,<3.9", markers="sys_platform == 'win32'"},
    { url="https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp39-cp39-win_amd64.whl", python=">=3.9,<3.10", markers="sys_platform == 'win32'"},
    { url="https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-win_amd64.whl", python=">=3.10,<3.11", markers="sys_platform == 'win32'"},
    { url="https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp311-cp311-win_amd64.whl", python=">=3.11,<3.12", markers="sys_platform == 'win32'"}
]

gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.28.1"}
matplotlib = "^3.7.1"
torchinfo = "^1.7.2"
pygame = "2.3.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
