[tool.poetry]
name = "Playground"
version = "0.1.0"
description = "Various implementation of RL algorithms to solve Gym environments."
authors = ["Paolo Bernacca <bernaccapaolo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
numpy = ">=1.21"

torch = [
    { url="https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp312-cp312-win_amd64.whl", python=">=3.12,<3.13", markers="sys_platform == 'win32'"}
]

torchvision = [
    { url="https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp312-cp312-win_amd64.whl", python=">=3.12,<3.13", markers="sys_platform == 'win32'"}
]

gymnasium = {version = "^0.29.1"}
matplotlib = "^3.7.1"
torchinfo = "^1.7.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
