[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Various implementation of RL algorithms to solve Gym environments."
authors = ["Paolo Bernacca <bernaccapaolo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=1.21"

torch = [
    { url="https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp311-cp311-win_amd64.whl", python=">=3.11,<3.12", markers="sys_platform == 'win32'"}
]

torchvision = [
    { url="https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp311-cp311-win_amd64.whl", python=">=3.11,<3.12", markers="sys_platform == 'win32'"}
]


gymnasium = {extras = ["accept-rom-license", "atari", "mujoco", "other"], version = ">=0.29.1"}
matplotlib = ">=3.7.1"
torchinfo = ">=1.7.2"
pygame = ">=2.3.0"
tqdm = ">=4.65.0"
tensorboard = ">=2.15.0"
protobuf = "<5.0.0"
tyro = ">=0.8.0"
